# conjugator

./: Cargo.toml  LICENSE.txt  Makefile  README.md  german_verb_list.txt
src/: main.rs
